# academic-research-agent

./: .gitignore  README.md  docker-compose.infra.yml  docker-compose.yml  findings.md  progress.md  task_plan.md
.agents/skills/project-rules/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/skills/minimax-image/: SKILL.md
.claude/skills/project-rules/: SKILL.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analyze.py  chat.py  citation.py  conversations.py  diagram.py  draft.py  export.py  papers.py  settings.py
backend/app/core/: graph.py  llm.py  state.py
backend/app/core/nodes/: planner.py  query_rewrite.py  retriever.py  reviewer.py  writer.py
backend/app/core/tools/: web_search.py
backend/app/db/: database.py  models.py
backend/app/models/: paper.py  request.py  response.py
backend/app/repositories/: analysis_repo.py  conversation_repo.py  paper_repo.py  paper_store.py  vector_repo.py
backend/app/services/: doc_service.py  rag_service.py
docs/: TODO.md  career-plan.md  dev-growth-notes.md  doc-parsing.md  research-vector-db-and-rag.md  tech-spec.md
docs/images/: fastapi-layered-architecture.drawio  system-architecture.drawio
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analyze/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/papers/: page.tsx
frontend/lib/: api.ts  store.ts
frontend/types/: index.ts
(+10 files in other folders)
