[project]
name = "backend"
version = "0.1.0"
description = "Academic Research Agent - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "markitdown>=0.1.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.42.0",
]
